# tuilib

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
examples/: tracing_setup.rs
examples/basic_app/: README.md  main.rs
src/: lib.rs  prelude.rs  tracing.rs
src/components/: component.rs  focusable.rs  mod.rs  renderable.rs  text_input.rs
src/components/modal/: alert.rs  button.rs  confirm.rs  mod.rs  overlay.rs  prompt.rs
src/event/: event_loop.rs  mod.rs  shutdown.rs  terminal.rs  timing.rs
src/focus/: id.rs  manager.rs  mod.rs  ring.rs  trap.rs
src/input/: action.rs  binding.rs  bindings.rs  handler.rs  matcher.rs  middleware.rs  mod.rs  parser.rs  router.rs  sequence.rs  terminput_ext.rs
src/theme/: builder.rs  colors.rs  component.rs  core.rs  mod.rs  styles.rs
