[package]
name = "tuilib"
version = "0.1.0"
edition = "2021"
description = "An opinionated TUI component library with input action mapping built on ratatui"
license = "MIT"
repository = "https://github.com/jonbito/tuilib"
keywords = ["tui", "terminal", "ratatui", "components", "ui"]
categories = ["command-line-interface", "gui"]
rust-version = "1.70"

[dependencies]
ratatui = { version = "0.29", features = ["serde"] }
crossterm = { version = "0.29", optional = true }
terminput = "0.5"
terminput-crossterm = { version = "0.4", default-features = false, features = ["crossterm_0_29"], optional = true }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }
tracing-appender = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
toml = "0.9"

[features]
default = ["crossterm-backend"]
crossterm-backend = [
  "dep:crossterm",
  "dep:terminput-crossterm",
  "ratatui/crossterm",
]
tracing-setup = ["dep:tracing-subscriber", "dep:tracing-appender"]

[[example]]
name = "tracing_setup"
required-features = ["tracing-setup"]

[[example]]
name = "basic_app"
path = "examples/basic_app/main.rs"
required-features = ["tracing-setup"]
